--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "highcharts": "^9.3.3",
     "highcharts-react-official": "^3.1.0",
+    "jest": "^27.5.1",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
